...
    <string name="nd_drawer_close">close</string>
    <string name="nd_manage_accounts">Manage accounts</string>
    <string name="nd_select_account">Select Account</string>

    <!-- Home Activity -->
    <string name="h_repository_label">Repository</string>
    <string name="h_library_label">Library</string>

    <!-- Password Dialog -->
    <string name="h_ad_title_server_sign_in">Server sign-in</string>
    <string name="h_ad_label_wrong_password">The username or password is incorrect. Re-enter your credentials.</string>
    <string name="h_ad_label_server_profile">Server Profile</string>

...

    <!-- Search Activity -->
    <string name="s_hint">Search resources</string>
    <string name="s_saved_items_hint">Search saved files</string>

    <!-- Action Bar -->
    <string name="s_ab_filter_by">Filter by</string>
    <string name="s_ab_sort_by">Sort by</string>

    <!-- File viewing -->
    <!--TODO Remove!-->
    <string name="fv_try_again_btn">Try again</string>
    <string name="fv_can_not_show_message">Can not show file content</string>
    <!--TODO Remove!-->
    <string name="fv_undefined_message">Can not open. Resource type undefined</string>
    <!--TODO Remove!-->
    <string name="fv_opening_message">Opening file...</string>

    <!-- Filter Dialog -->
    <string name="s_fd_option_all">All</string>
    <string name="s_fd_option_reports">Reports</string>
    <string name="s_fd_option_saved_values">Saved values</string>
    <string name="s_fd_option_dashboards">Dashboards</string>
    <string name="s_fd_option_files">Files</string>
    <!--TODO Remove!-->
    <string name="s_fd_option_others">Others</string>
    <string name="s_fd_sort_label">Label</string>
    <string name="s_fd_sort_date">Creation date</string>

    <!-- Filter Favorites Dialog -->
    <string name="f_fd_option_folders">Folders</string>

    <!-- Settings Activity -->
    <string name="sa_show_about">About</string>
    <string name="sa_about_info" translatable="false"><![CDATA[TIBCO® JasperMobile™ v%1$s<br><br>Management tool and report viewer for TIBCO JasperReports® Server 6.0 and greater.<br><br>For more information visit:<br><a href="http://community.jaspersoft.com/project/tibco-jaspermobile-android">http://community.jaspersoft.com/project/tibco-jaspermobile-android</a><br><br>For privacy policy informat
    <string name="sa_about_privacy">Privacy Policy</string>
    <string name="sa_show_feedback">Feedback</string>
...
    <!-- Error messages -->
    <string name="sr_error_field_is_empty">This field is required.</string>
    <string name="sr_error_characters_not_allowed">The following characters are not allowed: * \\ / \" \' : ? | &lt; > + [ ]</string>
    <string name="sr_error_report_exists">A file with this name already exists.</string>

    <!-- Favorites activity -->
    <string name="f_title">Favorites</string>
    <string name="f_empty_list_msg">No favorite items</string>

    <!-- Saved Files Activity -->
    <string name="sdr_ab_title">Saved Files</string>
    <string name="sdr_ab_list_msg">No saved files</string>
    <string name="sdr_saving_multiply_msg">%1$s reports downloading</string>
    <string name="sdr_starting_downloading_msg">Starting downloading…</string>
...
