...
    along with Jaspersoft Mobile for Android. If not, see
    <http://www.gnu.org/licenses/lgpl>.
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="70"
        android:showAsAction="always|collapseActionView"
        android:title="@android:string/search_go" />

    <item
        android:id="@+id/switchLayout"
        android:icon="@drawable/ic_collections_view_as_grid"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/r_ab_switch" />

    <item
...
